// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> DestructiveDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--destructive"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> DestructiveNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--destructive"
>
  Button
</button>
`;

exports[`<Button /> FullWidth story renders snapshot 1`] = `
<button
  class="button button--lg button--primary button--full-width"
>
  Button
</button>
`;

exports[`<Button /> LinkDisabled story renders snapshot 1`] = `
<button
  class="button button--link"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> LinkNoIcon story renders snapshot 1`] = `
<button
  class="button button--link"
>
  Button
</button>
`;

exports[`<Button /> PrimaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> PrimaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--primary"
>
  Button
</button>
`;

exports[`<Button /> PrimaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--primary"
>
  Button
</button>
`;

exports[`<Button /> PrimarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--primary"
>
  Button
</button>
`;

exports[`<Button /> SecondaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> SecondaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--secondary"
>
  Button
</button>
`;

exports[`<Button /> SecondaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--secondary"
>
  Button
</button>
`;

exports[`<Button /> SecondarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--secondary"
>
  Button
</button>
`;

exports[`<Button /> TeritaryDisabled story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
  disabled=""
  tabindex="-1"
>
  Button
</button>
`;

exports[`<Button /> TeritaryMedium story renders snapshot 1`] = `
<button
  class="button button--md button--tertiary"
>
  Button
</button>
`;

exports[`<Button /> TeritaryNoIcon story renders snapshot 1`] = `
<button
  class="button button--lg button--tertiary"
>
  Button
</button>
`;

exports[`<Button /> TeritarySmall story renders snapshot 1`] = `
<button
  class="button button--sm button--tertiary"
>
  Button
</button>
`;
